--- a/Virtual Trainer/Base.lproj/Main.storyboard
+++ b/Virtual Trainer/Base.lproj/Main.storyboard
@@ -1,24 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="j0f-9k-5iK">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--What's your goal?-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Virtual_Trainer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eSz-MN-9lk">
+                                <rect key="frame" x="60" y="378" width="254" height="45"/>
+                                <color key="backgroundColor" red="1" green="0.47112991119999997" blue="0.27528775519999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="I39-zw-oJM"/>
+                                    <constraint firstAttribute="width" constant="254" id="fTA-1R-cVJ"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Bulk"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qOb-q9-3lX">
+                                <rect key="frame" x="60" y="308" width="254" height="45"/>
+                                <color key="backgroundColor" red="1" green="0.47112991117928116" blue="0.27528775518186144" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="254" id="IN4-nr-oB6"/>
+                                    <constraint firstAttribute="height" constant="45" id="OKI-OZ-CEq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Cut"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cYZ-WC-D4m">
+                                <rect key="frame" x="60" y="448" width="254" height="45"/>
+                                <color key="backgroundColor" red="1" green="0.47112991119999997" blue="0.27528775519999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="254" id="dXy-t4-dza"/>
+                                    <constraint firstAttribute="height" constant="45" id="oKZ-AK-hxy"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Overall"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bVI-WH-svb">
+                                <rect key="frame" x="41" y="361" width="292" height="9"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="9" id="Jea-Fk-edN"/>
+                                    <constraint firstAttribute="width" constant="292" id="Rvq-ah-NnH"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ewD-Ug-Cdw">
+                                <rect key="frame" x="60" y="238" width="254" height="45"/>
+                                <color key="backgroundColor" red="1" green="0.47112991119999997" blue="0.27528775519999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="254" id="41s-jW-gmu"/>
+                                    <constraint firstAttribute="height" constant="45" id="Vp3-UZ-h1V"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Cardio"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="cYZ-WC-D4m" firstAttribute="top" secondItem="eSz-MN-9lk" secondAttribute="bottom" constant="25" id="1S4-XG-dQj"/>
+                            <constraint firstItem="qOb-q9-3lX" firstAttribute="top" secondItem="ewD-Ug-Cdw" secondAttribute="bottom" constant="25" id="47G-pg-LaA"/>
+                            <constraint firstItem="cYZ-WC-D4m" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="8w5-lr-7B3"/>
+                            <constraint firstItem="bVI-WH-svb" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="FeJ-ZV-fZS"/>
+                            <constraint firstItem="ewD-Ug-Cdw" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="YBO-TW-WKZ"/>
+                            <constraint firstItem="bVI-WH-svb" firstAttribute="top" secondItem="qOb-q9-3lX" secondAttribute="bottom" constant="8" id="YOU-VI-9UW"/>
+                            <constraint firstItem="eSz-MN-9lk" firstAttribute="top" secondItem="bVI-WH-svb" secondAttribute="bottom" constant="8" id="ZAB-ne-tl0"/>
+                            <constraint firstItem="eSz-MN-9lk" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="bNX-1I-w4T"/>
+                            <constraint firstItem="qOb-q9-3lX" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="cgQ-gp-D7T"/>
+                            <constraint firstItem="bVI-WH-svb" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="fya-Un-1IF"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="What's your goal?" id="Fgt-SZ-lYn"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="845.60000000000002" y="492.50374812593708"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="EfY-Xy-fE0">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="j0f-9k-5iK" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GWV-20-fSw">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="DS9-pL-8FL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qpy-np-Odi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="105.59999999999999" y="492.95352323838085"/>
         </scene>
     </scenes>
 </document>
